--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
-    <title>Video Uploader</title>
-    <link rel="stylesheet" media="screen" type="text/css" href="bundle.css">
+    <title>{{pageTitle}}</title>
+    <link rel="stylesheet" media="screen" type="text/css" href="/bundle.css">
 </head>
 <body>
-    <div id="app"></div>
-    <script charset="utf-8" src="bundle.js"></script>
+    <div id="app">{{html}}</div>
+    <script charset="utf-8" src="/bundle.js" defer></script>
+    <script>window.__INITIAL_DATA__ = {{data}};</script>
+    <script>window.__PRELOADED_STATE__ = {{state}};</script>
 </body>
 </html>
