Add functional tests

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <div id="app">{{html}}</div>
     <script charset="utf-8" src="/bundle.js" defer></script>
     <script>window.__INITIAL_DATA__ = {{data}};</script>
+    <script>window.__INITIAL_CONFIG__ = {{config}};</script>
     <script>window.__PRELOADED_STATE__ = {{state}};</script>
 </body>
 </html>
