Get backend working

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" media="screen" type="text/css" href="/bundle.css">
 </head>
 <body>
-    <div id="app">{{html}}</div>
+    <div id="app" style="opacity: 0;">{{html}}</div>
     <script charset="utf-8" src="/bundle.js" defer></script>
     <script>window.__INITIAL_DATA__ = {{data}};</script>
     <script>window.__INITIAL_CONFIG__ = {{config}};</script>
